--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,59 +11,14 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: sainiji
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
     
-    - name: Install Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 13.x
-    
-    - name: Install NPM packages
-      run: npm ci
-    
+     
     - name: Build project
-      run: npm run build
+      run: ls -l
     
-    - name: Run tests and produce reports
-      run: npm run test:ci
-    
-    - name: Publish test results
-      uses: IgnusG/jest-report-action@v2.3.3
-      if: always()  
-      with:
-        access-token: ${{ secrets.ACCESS_TOKEN }}   
-
-    - name: Publish code coverage results
-      uses: romeovs/lcov-reporter-action@v0.2.19
-      with:
-        github-token: ${{ secrets.ACCESS_TOKEN }}
-        lcov-file: ./coverage/lcov.info
-
-    - name: Upload production-ready build files
-      uses: actions/upload-artifact@v2
-      with:
-        name: production-files
-        path: ./build
-  
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: production-files
-        path: ./build
-
-    - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.ACCESS_TOKEN }}
-        publish_dir: ./build
+   
