--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,13 @@ jobs:
       uses: actions/checkout@v2
     
      
-    - name: Build project
-      run: ls -l
+    - name: check hostname
+      run: hostname
+      
+    - name: create directory
+      run: mkdir Data && cd Data
+      
+    - name : create multiple files into Data file
+      run: touch file{1...10}.txt      
     
    
