--- a/.github/workflows/var.yml
+++ b/.github/workflows/var.yml
@@ -5,18 +5,11 @@ on:
     branches: [main]
 
 env:
-  BUILD_CONFIGURATION: Release
+  PROJECT_ID : PID20211230
 
 jobs:
-  job1:
+  java-project:
     runs-on: ubuntu-latest
     steps:
-      - name: First script from job1
-        run: echo We use the global workflow variable $BUILD_CONFIGURATION
-
-  job2:
-    needs: job1
-    runs-on: ubuntu-latest
-    steps:
-      - name: First script from job2
-        run: echo And here again we use the same workflow variable $BUILD_CONFIGURATION
+      - name: First script from java ant project
+        run: echo We use the global workflow variable in java project $PROJECT_ID
